--- a/dart/web/index.html
+++ b/dart/web/index.html
@@ -8,11 +8,11 @@
   <canvas id="video-canvas" width="800" height="600" style="background: #ddd;"></canvas>
   <br/>
   <button id="camera-button" onclick="TopCodes.startStopVideoScan('video-canvas')">Start / Stop</button>
+  <input type="file" id="fileInput">
 
   <script src="js/adapter-0.2.9.js"></script>
   <script src="js/topcodes.js"></script>
-  <script type="application/dart" src="dart/main.dart"></script>
-  <script type="text/javascript" src="packages/browser/dart.js"></script>
+  <script defer src="dart/main.dart.js"></script>
   <script>
 
   TopCodes.setVideoFrameCallback("video-canvas", function(jsonString) {
