Added mirror scan

--- a/dart/web/index.html
+++ b/dart/web/index.html
@@ -9,6 +9,7 @@
   <canvas id="image-canvas" width="800" height="600" style="background: #ddd;"></canvas>
   <br/>
   <button id="camera-button" onclick="TopCodes.startStopVideoScan('video-canvas')">Start / Stop</button>
+  <button id="camera-button" onclick="TopCodes.startVideoScanM('video-canvas')">Start / Stop - Mirror</button>
   <input type="file" id="fileInput">
 
   <script src="js/adapter-0.2.9.js"></script>
